# in-formant

./: .gitignore  .gitmodules  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  Dockerfile.Linux  Dockerfile.Windows  FindFFTW.cmake  How-does-it-work.md  LICENSE.md  README.md  build-all.sh  build-android.sh  build-df.sh  build-docker-images.sh  build-emscripten.sh  build-lin-debug.sh  build-lin.sh  build-linux.bat  build-linux.sh  build-osx.sh  build-win-mxe.sh  build-windows.bat  build-windows.sh  build.sh  list  make-dmg.sh  package-dbg.ps1  package-rel.ps1  package.sh  resources.qrc  serve.json
lib/: CMakeLists.txt  rpmalloc.h
lib/DeepFormants/: df.h  features.cpp  model.pt  torch.cpp
lib/FFT/: FFT.cpp  FFT.h
lib/Formant/: Formant.cpp  Formant.h  track.cpp
lib/Formant/DF/: features.cpp
lib/Formant/EKF/: EKF.h  fb2cp.cpp  genLPCC.cpp  getH_FBW.cpp  init.cpp  step.cpp
lib/GCOI/: GCOI.h  MP.cpp  OQ.cpp  SEDREAMS.cpp  findpeaks.cpp
lib/GCOI/gci_sedreams/: findpeaks.cpp  gci_sedreams.h  median.cpp  sedreams.cpp  zerocrossings.cpp
lib/IAIF/: IAIF.cpp  IAIF.h
lib/LPC/: LPC.cpp  LPC.h  LPC_filter.cpp  LPC_huber.cpp  LPC_huber.h  residual.cpp
lib/LPC/Frame/: LPC_Frame.cpp  LPC_Frame.h  LPC_Frame_auto.cpp  LPC_Frame_burg.cpp  LPC_Frame_huber.cpp
lib/MFCC/: MFCC.h
lib/Math/: Bairstow.cpp  Bairstow.h  Polynomial.cpp  Polynomial.h  Viterbi.cpp  Viterbi.h
lib/Pitch/: Pitch.h  Pitch_AMDF.cpp  Pitch_CREPE.cpp  Pitch_DynWav.cpp  Pitch_MPM.cpp  Pitch_YIN.cpp
lib/Pitch/CREPE/: .gitignore  crepe.cpp  crepe.h  k2tf_convert.py  models.h
lib/Pitch/McLeod/: MPM.h  autocorrelation.cpp  parabolic_interpolation.cpp  peak_picking.cpp
lib/Pitch/Yin/: YIN.h  autocorrelation.cpp  cmnd.cpp  difference.cpp  parabolic_interpolation.cpp  threshold.cpp
lib/Signal/: Filter.cpp  Filter.h  Resample.cpp
lib/rpmalloc/: allocator.h  malloc.c  rpmalloc.c  rpmalloc.h
src/: .gitignore  .main.cpp.swp  CMakeLists.txt  Exceptions.cpp  Exceptions.h  NullSettings.h  android_redirect_log.cpp  file_logger.c  file_logger.cpp  file_logger.h  filesystem.hpp  fixedsizevector.h  fixedsizevector.ipp  main.cpp  qt_plugin.cpp  qwasmsettings.h  timetrack.h  timetrack.ipp  tomlplusplus.cpp  windows_debug.cpp  windows_exception_handler.cpp
src/analysis/: Analyser.cpp  Analyser.h  Analyser_mainLoop.cpp  analysis.h
src/analysis/fft/: complexfft.cpp  fft.h  fft_n.cpp  realfft.cpp  realrealfft.cpp  wisdom.cpp
src/analysis/filter/: butterworth.cpp  filter.cpp  filter.h  sosfilter.cpp  zpk2sos.cpp
src/analysis/filterbanks/: erb.cpp  filterbanks.h  linear.cpp  log.cpp  mel.cpp
src/analysis/formant/: deepformants.cpp  filteredlp.cpp  formant.h  karma.cpp  simplelp.cpp
src/analysis/freqz/: freqz.h  sosfreqz.cpp
src/analysis/gammatonegram/: erbfilterbank.cpp  erbfilters.cpp  erbspace.cpp  gammatonegram.cpp  gammatonegram.h
src/analysis/gci/: sigma.cpp  sigma.h  xewgrdel.cpp
src/analysis/gmm/: GMM.cpp  GMM.h  Kmeans.cpp  Kmeans.h  Matrix.cpp  Matrix.h
src/analysis/invglot/: amgif.cpp  gfm_iaif.cpp  iaif.cpp  invglot.h
src/analysis/linpred/: autocorr.cpp  burg.cpp  covar.cpp  linpred.h
src/analysis/parts/: MedianFilter.hpp  deepformants.cpp  formants.cpp  inversefilter.cpp  lpc.cpp  median.cpp  normalize.cpp  openquotient.cpp  pitch.cpp  preemph.cpp  preprocess.cpp  refinePitch.cpp  resample.cpp  smooth.cpp  spectrum.cpp  track.cpp
src/analysis/pitch/: amdf_m.cpp  irapt.cpp  mpm.cpp  pitch.h  rapt.cpp  rapt.h  yin.cpp
src/analysis/resampler/: resampler.cpp  resampler.h
src/analysis/util/: aberth.cpp  aberth.h  calc_formant.cpp  eval_polynomial.cpp  find_peaks.cpp  find_roots.cpp  laguerre.cpp  laguerre.h  parabolic_interpolation.cpp  polish_root.cpp  sort_formants.cpp  util.h  zerocros.cpp
src/analysis/wavelet/: coeffs.cpp  (+15 more)
src/audio/: AudioCapture.cpp  AudioCapture.h  AudioCapture_callbacks.cpp  AudioDevices.cpp  AudioDevices.h  AudioInterface.cpp  AudioInterface.h  AudioInterface_callbacks.cpp  NoiseFilter.cpp  NoiseFilter.h  Resampler.cpp  RingBuffer.cpp  RingBuffer.h  SineWave.cpp  SineWave.h  implementation.cpp  miniaudio.h
src/backtrace/: backtrace.h  unix.cpp  windows.cpp  windows64.cpp
src/context/: .contextmanager.cpp.swp  audiocontext.cpp  audiocontext.h  cfgpath.h  config.cpp  config.h  context.h  contextbuilder.h  contextmanager.cpp  contextmanager.h  ctxmgr_androidcommon.cpp  ctxmgr_fftspectrum.cpp  ctxmgr_oscilloscope.cpp  ctxmgr_settings.cpp  ctxmgr_spectrogram.cpp  ctxmgr_synth.cpp  datastore.cpp  datastore.h  dataviswrapper.cpp  dataviswrapper.h  guicontext.cpp  guicontext.h  rendercontext.cpp  rendercontext.h  rendercontextprovider.cpp  solvermakers.cpp  solvermakers.h  synthwrapper.cpp  synthwrapper.h  timings.cpp  timings.h
src/gui/: AnalyserCanvas.cpp  AnalyserCanvas.h  AnalyserWindow.cpp  AnalyserWindow.h  ColorMaps.cpp  ColorMaps.h  Keybinds.cpp  Keybinds.h  MainWindow.cpp  MainWindow.h  Oscilloscope.cpp  Oscilloscope.h  PowerSpectrum.cpp  PowerSpectrum.h  SDLUtils.cpp  SDLUtils.h  Spectrogram.cpp  Spectrogram.h  app.cpp  canvas.cpp  canvas.h  canvas_item.cpp  canvas_renderer.cpp  canvas_renderer.h  cmap.cpp  font.cpp  font.h  gui.h  qpainterwrapper.cpp  qpainterwrapper.h  qpainterwrapper_static.cpp  qpainterwrapperbase.h  ui_MainWindow.cpp
src/jni/: JniInstance.cpp  JniInstance.h  bindings.cpp
src/log/: simpleQtLogger.cpp  simpleQtLogger.h
src/main/: context.cpp  context.h  contextbuilder.h  contextmanager.cpp  contextmanager.h
src/modules/: modules.h
src/nodes/: nodes.h
src/qml/: MainWindow.qml  OscilloscopeWindow.qml  SynthWindow.qml
src/signal/: FFT.cpp  Filter.cpp  Filter.h  LPC.cpp  LPC.h  LPC_Frame.h  LPC_Frame_auto.cpp  LPC_Frame_burg.cpp  LPC_Frame_covar.cpp  LPC_Frame_huber.cpp  LPC_filter.cpp  LPC_huber.cpp  LPC_huber_stat.cpp  Pitch.h  Pitch_AMDF.cpp  Pitch_DynWav.cpp  Polynomial.h  Polynomial_impl.h  Resample.cpp  Resample.h  Window.cpp  Window.h
src/synthesis/: filter.cpp  glotLf.cpp  noise.cpp  polyFromRoots.cpp  shiftFilter.cpp  sosfilter.cpp  synthesis.h  vtfilter.cpp
src/time/: datatypes.h  time_util.cc  time_util.h
(+296 files in other folders)
